--- a/10-Variance-I.Rmd
+++ b/10-Variance-I.Rmd
@@ -511,28 +511,44 @@ Au final que conclure\ ? Lorsque l'ANOVA peut être utilisée, elle est à préf
 
 ##### À vous de jouer ! {-}
 
-Appliquez vos nouvelles connaissances dans l'assignation de groupe que vous avez débutée lors du module précédent.
+Appliquez vos nouvelles connaissances dans le projet de groupe que vous avez débuté aux deux modules précédents.
 
-```{r, echo=FALSE, results='asis'}
-if (exists("assignation2"))
-  assignation2("A08Ga_human_health", part = "III",
+```{r assign_A08Ga_human_health_III, echo=FALSE, results='asis'}
+if (exists("assignment2"))
+  assignment2("A08Ga_human_health", part = "III",
     url = "https://github.com/BioDataScience-Course/A08Ga_human_health",
+    course.ids = c(
+      'S-BIOG-006' = !"A08Ga_{YY}M_human_health", 
+      'S-BIOG-921' = !"A08Ga_{YY}C_human_health"),
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/g/...",
+      'S-BIOG-006' = "https://classroom.github.com/g/...", 
       'S-BIOG-921' = "https://classroom.github.com/g/..."),
-    toc = "La biométrie humaine")
+    course.starts = c(
+      'S-BIOG-006' = !"{W[29]+1} 13:00:00"),
+    course.ends = c(
+      'S-BIOG-006' = !"{W[33]+1} 23:59:59"),
+    term = "Q2", level = 4, n = 2,
+    toc = "Biométrie humaine, part III")
 ```
 
-**Note\ : Ce projet est la continuité d'un projet débuté lors que premier quadrimestre. l'assignation GitHub suivante est un exercice à réaliser en *binôme*. Ce projet est également transmodule, ce qui signifie que vous reviendrez dessus à plusieurs reprises au fur et à mesure de votre progression dans la matière afin de compléter votre analyse de ces données, toujours en binômes. Vous formez les binômes librement comme bon vous semble.**
+**Note\ : Le projet suivant est la continuité d'un exercice débuté au premier quadrimestre et approfondis aux deux modules précédents.**
 
-```{r, echo=FALSE, results='asis'}
-if (exists("assignation2"))
-  assignation2("A03Ga_urchin", part = "II",
+```{r assign_A03Ga_urchin_IV, echo=FALSE, results='asis'}
+if (exists("assignment2"))
+  assignment2("A03Ga_urchin", part = "IV",
     url = "https://github.com/BioDataScience-Course/A03Ga_urchin",
+    course.ids = c(
+      'S-BIOG-006' = !"A03Ga_{YY}M_urchin", # TODO: how to account it in Q2???
+      'S-BIOG-921' = !"A03Ga_{YY}C_urchin"),
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/g/...",
+      'S-BIOG-006' = "https://classroom.github.com/g/...", 
       'S-BIOG-921' = "https://classroom.github.com/g/..."),
-    toc = "Biométrie de l'oursin violet")
+    course.starts = c(
+      'S-BIOG-006' = !"{W[29]+1} 13:00:00"),
+    course.ends = c(
+      'S-BIOG-006' = !"{W[33]+1} 23:59:59"),
+    term = "Q2", level = 4, n = 2,
+    toc = "Biométrie de l'oursin violet, part IV")
 ```
 
 ## Récapitulatif des exercices
