--- a/11-Variance-II.Rmd
+++ b/11-Variance-II.Rmd
@@ -200,14 +200,22 @@ Les conditions d'application sont les mêmes que pour l'ANOVA à deux facteurs s
 
 ##### À vous de jouer ! {-}
 
-```{r, echo=FALSE, results='asis'}
-if (exists("assignation"))
-  assignation("A11Ia_anova2", part = "I",
+```{r assign_A11Ia_anova2_I, echo=FALSE, results='asis'}
+if (exists("assignment"))
+  assignment("A11Ia_anova2", part = "I",
     url = "https://github.com/BioDataScience-Course/A11Ia_anova2",
+    course.ids = c(
+      'S-BIOG-006' = !"A11Ia_{YY}M_anova2", 
+      'S-BIOG-921' = !"A11Ia_{YY}C_anova2"),
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-006' = "https://classroom.github.com/a/...", 
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
-    toc = "L'anova à 2 facteurs et ces variantes")
+    course.starts = c(
+      'S-BIOG-006' = !"{W[33]+1} 13:00:00"),
+    course.ends = c(
+      'S-BIOG-006' = !"{W[35]+1} 23:59:59"),
+    term = "Q2", level = 3,
+    toc = "ANOVA 2 facteurs, part I")
 ```
 
 
@@ -493,14 +501,22 @@ L'analyse des résidus (indispensable) n'est pas reproduite ici. Elle reste la m
 
 ##### À vous de jouer ! {-}
 
-```{r, echo=FALSE, results='asis'}
-if (exists("assignation"))
-  assignation("A11Ia_anova2", part = "II",
+```{r assign_A11Ia_anova2_II, echo=FALSE, results='asis'}
+if (exists("assignment"))
+  assignment("A11Ia_anova2", part = "II",
     url = "https://github.com/BioDataScience-Course/A11Ia_anova2",
+    course.ids = c(
+      'S-BIOG-006' = !"A11Ia_{YY}M_anova2", 
+      'S-BIOG-921' = !"A11Ia_{YY}C_anova2"),
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-006' = "https://classroom.github.com/a/...", 
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
-    toc = "L'anova à 2 facteurs et ces variantes")
+    course.starts = c(
+      'S-BIOG-006' = !"{W[33]+1} 13:00:00"),
+    course.ends = c(
+      'S-BIOG-006' = !"{W[35]+1} 23:59:59"),
+    term = "Q2", level = 3,
+    toc = "ANOVA 2 facteurs, part II")
 ```
 
 ### Modèle à mesures répétées
