--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,7 @@ cover-image: "images/front-cover.png"
 knitr::write_bib(c(.packages(), 'bookdown', 'knitr', 'rmarkdown'), 'packages.bib')
 ```
 
+`r learnitdown::clean_ex_toc()`
 `r learnitdown::diagnose_login(lang = "fr")`
 
 Cet ouvrage est conçu pour être utilisé de manière interactive en ligne. En effet, vous y trouverez des vidéos, des démonstrations interactives ainsi que des exercices sous forme de questionnaires interactifs. **Ces différents éléments ne sont, bien évidemment, utilisables qu'en ligne.**
@@ -55,60 +56,10 @@ Cet ouvrage est le premier d'une série de trois volumes traitant de la science 
 
 La matière est divisée en 12 modules représentant chacun 6h de travail en présentiel. Chaque module nécessitera environ 8h (variable en fonction de votre rythme et de votre technique d'apprentissage) de travail à domicile. **Une séance de 2h est programmée entre le module 1 et le module 2 afin d'installer les logiciels (SciViews Box, R, RStudio), et de se familiariser avec eux.**
 
-```{r diagram-sddI, out.width = '80%', fig.asp = .75, fig.align = 'center', echo = FALSE, warning = FALSE, cache = TRUE}
-DiagrammeR::grViz("
-digraph general_flow {
-  graph [rankdir = \"TB\", overlap = true, compount = true, fontsize = 10]
-  
-  node [shape = box,
-        fontname = Helvetica,
-        style = filled,
-        fillcolor = LightSteelBlue,
-        fixedsize = true,
-        width = 2]
-  '1 Introduction'
-  
-  subgraph cluster_0 {
-    style = filled;
-    color = lightgrey;
-    node [style = filled, color = red];
-    '2 Visualisation I'->'3 Visualisation II'
-    '2 Visualisation I'->'4 Visualisation III'
-    label = \"Visualisation & description des données\";
-    color = lightgray
-  }
-  
-  subgraph cluster_1 {
-    style = filled;
-    color = lightgrey;
-    node [style = filled, color = blue];
-    '5 Traitement I'->'6 Traitement II'
-    label = \"Importation & transformation des données\";
-    color = lightgray
-  }
-  
-  subgraph cluster_2 {
-    style = filled;
-    color = lightgrey;
-    node [style = filled, color = green];
-    '7 Probabilités'->'8 Test Chi2'
-    '7 Probabilités'->'9 IC/t-test'
-    '8 Test Chi2'->'9 IC/t-test'
-    '9 IC/t-test'->'10 ANOVA I'
-    '10 ANOVA I'->'11 ANOVA II'
-    '11 ANOVA II'->'12 Corrélation'
-    label = \"Inférence & hypothèses\";
-    color = lightgray
-  }
+Les six premiers modules vont font découvrir les logiciels nécessaires pour effectuer les exercices de ce cours\ : R, RStudio, git. Ils sont également consacrés à l'importation, le remaniement et la **visualisation** de données biologiques.
 
-  '1 Introduction'->'2 Visualisation I' [lhead = cluster_0]
-  '2 Visualisation I'->'5 Traitement I' [lhead = cluster_1]
-  '3 Visualisation II'->'7 Probabilités' [lhead = cluster_2]
-  '4 Visualisation III'->'7 Probabilités' [lhead = cluster_2]
-  '6 Traitement II'->'7 Probabilités' [lhead = cluster_2]
-}
-", width = 600, height = 600)
-```
+Les six modules suivants s'attaquent à l'**inférence** statistique, c'est-à-dire, l'art de tirer des conclusions sur l'observation d'un phénomène biologique en présence d'incertitude, de variation entre individus et d'erreur de mesure qui sont impossible à éviter en biologie. Il s'agit ici d'utiliser de manière correcte les tests d'hypothèses statistiques et de réaliser des analyses de données reproductibles.
+
 
 ## Matériel pédagogique {-} 
 
@@ -122,7 +73,7 @@ Le matériel pédagogique est aussi varié que possible. Vous pourrez ainsi pioc
 
 - des [tutoriels interactifs learnr](https://rstudio.github.io/learnr/). Vous pourrez exécuter ces tutoriels directement sur votre ordinateur dans RStudio, et vous aurez alors accès à des pages Web réactives contenant des explications, des exercices et des quiz en ligne directement dans votre environnerment de travail habituel. Ces tutoriels sont repérables via l'icône suivante [![tuto](images/list-tuto.png)](https://wp.sciviews.org/tutorial/){target='_parent'},
 
-- des [dépôts GitHub Classroom](https://classroom.github.com/) dans la section [BioDataScience-Course](https://www.github.com/BioDataScience-Course) pour réaliser et documenter vos travaux personnels. Les liens vers ces dépôts sont repérables par l'icône GitHub [![assign](images/list-assign.png)](https://wp.sciviews.org/github_assignation/){target='_parent'},
+- des [dépôts GitHub Classroom](https://classroom.github.com/) dans la section [BioDataScience-Course](https://www.github.com/BioDataScience-Course) pour réaliser et documenter vos travaux personnels. Les liens vers ces dépôts sont repérables par l'icône GitHub [![assign](images/list-assign.png)](https://wp.sciviews.org/github_assignment/){target='_parent'},
 
 - des renvois vers des documents externes en ligne, des vidéos [Youtube](https://www.youtube.com/) ou [Vimeo](https://vimeo.com/), des livres en anglais ou en français, des blogs, des tutoriels, des questions sur des sites comme [Stackoverflow](https://stackoverflow.com/) ou issues des [mailing lists R](https://www.r-project.org/mail.html), de [Twitter](https://twitter.com/), ...
 
@@ -137,7 +88,7 @@ Tout ce matériel est accessible à partir du [site Web du cours](https://wp.sci
 ::: {.S-BIOG-006 .S-BIOG-027 .S-BIOG-921}
 Tout ce matériel est accessible à partir du [site Web du cours](https://wp.sciviews.org){target='top'}, du présent syllabus interactif et de Moodle pour les étudiants de l'UMONS.
 
-Les travaux personnels seront à réaliser en utilisant un espace de travail en ligne dédié à la science des données (renku) ou sur un machine virtuelle préconfigurée, la **'SciViews Box'**, que nous installerons ensemble à la fin du premier module avec les étudiants possédant un ordinateur adapté.
+Les travaux personnels seront à réaliser en utilisant une machine virtuelle préconfigurée, la **'SciViews Box'**, que nous installerons ensemble à la fin du premier module avec les étudiants possédant un ordinateur adapté.
 
 Vous pourrez poser vos questions par mail à l'adresse [sdd@sciviews.org](mailto:sdd@sciviews.org) ou dans les issues du dépôt Github de ce cours. L'accès à se dépôt vous sera donné lors du premier module du cours.
 
@@ -180,7 +131,7 @@ On peut schématiser ce mode d'apprentissage comme cela
 
 ![](images/sdd1_00/organisation1.png)
 
-A la fin, un examen est indispensable pour valider l'acquisition des concetps.
+A la fin, un examen est indispensable pour valider l'acquisition des concepts.
 
 Le cours de science des données I utilise une autre approche et se donne en classe inversée. Le schéma ci-dessous vous propose l'organisation d'un module du cours. Vous devrez donc préparer en distanciel chaque session de cours en présentiel. Lors de chaque heure de travail lié à ce cours vous serez donc **actif**. 
 
@@ -201,11 +152,11 @@ Chaque type d'exercice est associé à un outil présenté dans la matériel pé
 
 L'ensemble de vos réponses sont collectées et utilisée afin de construire la note finale. Il n'est donc plus nécessaire de passer une examen classique en session d'examen. Tous ces exercices prouvent que vous avez acquis ou non les acquis d'apprentissage de ce cours.
 
-Votre progression au sein de exercices de chaque module est mis à votre disposition à la fin de chaque module ou bien depuis moodle.
+Votre progression au sein de exercices de chaque module est mis à votre disposition à la fin de chaque module ou bien depuis Moodle.
 
 ### Plan du cours {-}
 
-Le plan du cours est une forme de contrat entre l'étudiants et les encadrants. Ce document structure les attentes de vos encadrants. Veuillez consulter ce document attentivement. 
+Le plan du cours est une forme de contrat entre les étudiants et les encadrants. Ce document structure les attentes de vos encadrants. Veuillez consulter ce document attentivement. 
 
 - [Plan du cours de Science des données biologiques I : années 2021-2022](https://github.com/BioDataScience-Course/BioDataScience-Common/blob/main/docs/plan_de_cours/sdd1_plan_cours_2021-2022.md) 
 
@@ -217,27 +168,31 @@ Le plan du cours est une forme de contrat entre l'étudiants et les encadrants. 
 
 ## Issues {.unnumbered #issues}
 
-Toutes les questions relatives aux exercices sont à poser dans les issues GitHub dédiées à ce cours. lors de la première lecture de ce préambule, vous ne connaissez pas encore les issues. Nous allons découvrir ces termes lors du premier module du cours. Vous rejoindrez cet espace de discussion par la suite. 
+Toutes les questions relatives aux exercices sont à poser dans les issues GitHub dédiées à ce cours. Lors de la première lecture de ce préambule, vous ne connaissez pas encore les "issues". Nous allons découvrir ce que cache ce terme lors du premier module du cours. Vous rejoindrez cet espace de discussion par la suite. 
 
-Afin d'accéder à cet espace de discussion, cliquez sur `Assignation GitHub Classroom dédiée aux issues pour les étudiants inscrits au cours de Science des Données Biologiques I à l’UMONS`. Si cette instruction n’apparaît pas, c'est que vous n'êtes pas reconnu comme un étudiant de ce cours.
-
-
-```{r, echo=FALSE, results='asis'}
-if (exists("assignation2"))
-  assignation2("sdd_issues", part = NULL,
+```{r assign_A00Ga_issues, echo=FALSE, results='asis'}
+if (exists("assignment2"))
+  assignment2("A00Ga_issues", part = NULL, clone = FALSE,
     url = "https://github.com/BioDataScience-Course/sdd_issues",
+    course.ids = c(
+      'S-BIOG-006' = !"A00Ga_{YY}M_issues",
+      'S-BIOG-921' = !"A00Ga_{YY}C_issues"),
     course.urls = c(
       'S-BIOG-006' = "https://classroom.github.com/g/qqAiEV2e",
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
-    toc = "Poser ses questions dans une issue.",
-    texts = learnitdown::assignation2_fr(
-      title = "Rejoignez l'assignation",
-      course = "Assignation GitHub Classroom d\u00e9di\u00e9e aux issues pour les \u00e9tudiants inscrits au cours de", 
+    course.ends = c(
+      'S-BIOG-006' = !"{W[53]+5} 23:59:59",
+      'S-BIOG-921' = !"{W[53]+6} 23:59:59"),
+    term = "", level = 0,
+    toc = "Poser ses questions dans une issue.", n = 100,
+    texts = learnitdown::assignment2_fr(
+      title = "Rejoignez le projet",
+      course = "[Projet GitHub Classroom d\u00e9di\u00e9e aux issues pour les \u00e9tudiants inscrits au cours de {course_name}]({course_url}){{target=\"_blank\"}}", 
       alt = "Les issues ne sont pas accessibles aux \u00e9tudiants externes."))
 ```
 
-*Note : vos enseignants sont également accessibles par mail sdd@sciviews.org.*
+*Note : vos enseignants sont également accessibles par mail via sdd@sciviews.org.*
 
-Une fois que vous avez rejoint l'équipe `A21`, il n'est plus nécessaire d'utiliser cette assignation. Vous pouvez retrouver directement ce dépôt via la bannière du site.
+Une fois que vous avez rejoint l'équipe **`r !"A{YY}"`**, il n'est plus nécessaire d'utiliser le lien GitHub Classroom vers ces issues. Vous pouvez retrouver directement les issues liées à ce dépôt via la bannière du site.
 
 ![](images/sdd1_00/issues.png)
